# kafka-migration

./: 01-dump-registry.py  02-migrate-to.py  Makefile  README.md  docker-compose.yml  pyproject.toml
config/: database.py
db/migrations/: 2025_02_19_164228_create_schemas_table.py
models/: schema.py
registry/: registry.py
