[tool.poetry]
name = "registries"
version = "0.1.0"
description = ""
authors = ["Naner Nunes <naner.nunes@loggi.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11.5"
requests = "^2.32.3"
masonite-orm = "^2.24.0"
ipdb = "^0.13.13"
networkx = "^3.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
